css/app.css
/* ... */
/*blog entry*/
.blogbg {
	background: url(../blog/apic.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  padding: 2rem 0rem;
}
.blogbg1 {
	background: url(../blog/bg1.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  padding: 2rem 0rem;
}
.blogbg2 {
	background: url(../blog/bg2.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  padding: 2rem 0rem;
}
.blogbody {
	background: rgb(255, 255, 255); 
    background: rgba(255, 255, 255, 0.9);
	margin-left: auto;
	margin-right: auto;
	padding-bottom: 1em;
}
.blogbody p {
	width: 80%;
	margin-right: auto;
	margin-left: auto;
	font-family: 'Raleway', sans-serif;
}
.bb2 a {
	text-transform: capitalize;
	color: #4A90E2;
	font-weight: bold;
	font-family: 'Raleway', sans-serif;
}
.bb1 p.firstp::first-letter {
  color: #ebf7ed;
  background-color: #558d72;
  font-size: 4em;
  font-weight: bold;
  float: left;
  margin-right: .2em;
  padding: 0em .5em;
  line-height: 1.5em;
  font-family: times;
  border: 0px solid;
  border-radius: 10%;
}
.bb2 p.firstp::first-letter {
  color: #2518e8;
  font-size: 6em;
  font-weight: bold;
  float: left;
  margin-right: .15em;
  padding: 0em 0em;
  line-height: 1em;
  font-family: times;
  border: 0px solid;
  border-radius: 10%;
}
.blogbody .subhead{
	text-align: center;
}
.blogbody h1 {
	font-family: 'Amatic SC', cursive;
	text-align: center;
	font-size: 60px;
	padding-top: 2rem;
}
.blogbody h3 {
	font-family: 'Coming Soon', cursive;
	text-transform: lowercase;
	color: white;
	text-align: center;
	background-color: rgba(0,0,0,.8);
}
.blogbody h3:hover{
	background-color: #484747;
    -webkit-transition: ease .2s;
	-moz-transition: ease .2s;
	transition: ease .2s;
}
.blogbody h5 {
	font-family: 'Raleway', sans-serif;
	width: 80%;
	margin-right: auto;
	margin-left: auto;
	font-weight: bold;
}
.blogpic {
	object-fit: cover;
	height: 18.75em;
	width: 25em;
	display: block;
	margin:2em auto;
}
/*about blog page*/
.aboutpic {
margin-top: 2em;
}
.about h3 {
	font-weight: bold;
	text-align: center;
	margin: 1em 0;
	font-family: 'Coming Soon', cursive;

}
.about p {
	font-family: 'Raleway', sans-serif;
}
.aboutpattern {
	background-image: url(../blog/pattern.jpg);
}
.instapic {
	border: 2px solid white;
    border-radius: 50%;
}
/* --- IMAGES --- */
img {
	display: block;
	position: relative;
}
.portfolio-img {
	margin: 0rem auto;
	width: 75%;
	padding-top: 1rem;
}
.about-img {
	margin-bottom: 1rem;
}
.presentations-page .thumbnail{
	margin: 1rem;
}
.design-page .thumbnail{
	margin: 1rem;
	border: 1px solid darkgray;
}

.presentations-page .thumbnail-overlay {
	padding: .5em;
	display: none;
	margin: 1rem 15px 1rem 0;
	color: #fff;
	position: absolute;
	bottom: 0;
	background: rgba(0,0,0,.7);
}
.design-page .thumbnail-overlay {
	padding: .5em;
	display: none;
	margin: 1rem 15px 1rem 0;
	color: #fff;
	position: absolute;
	bottom: 0;
	background: rgba(0,0,0,.7);
}
.design-page .thumbnail {
	width: 100%;
}
.project img {
	margin: 1rem 0;
}

.gallery img {
	display: inline-block;
	float: left;
	max-width: 200px;
	margin: 0 .2rem .2rem 0;
}
.featvid {
	padding: 0 .9375rem;
}
/* --- LINKS --- */
p a {
	padding: .2rem .2rem;
}

.label-content{
	margin: .5rem;
}
.portfolio-label {
	text-align: center;
	font-size: 40px;
    font-weight: bolder;
	/*border-bottom: 3px solid #4A90E2;
	font-size: 2vw;
	font-weight: 700;
	letter-spacing: 1.2px;
	
	position: absolute;
	text-align: center;	
	text-transform:uppercase;
	clear:both;
	margin: 0;
	top: 50%;
    left: 50%;
    margin-right: -50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);*/
}

.social a .fa {
	width: 24px;
	height: 24px;
	color: #f7f7f7;
	background: #222;
	border-radius: 50%;
	padding: .4rem;
	font-size: 12px;
	margin: 0 .2rem;
	text-align: center;
}

.fa.mobile {
	border-radius: 50%;
	color: #222;
	background: #f7f7f7;
	width: 50px;
	height: 50px;
	font-size: 28px;
	margin: 3rem .2rem 0 0 ;
	padding-top: 10px;
}
.fa.mobile.other {
	color: #f7f7f7;
	background: #222;
}

.other-mobile-social {
	margin-top: -2rem;
	margin-bottom: 3rem;
}

.button {
	background:#4A90E2;
	padding-left: 3rem;
	padding-right: 3rem;
	margin-top: 2rem;
	border-radius: 100px;
}

/*-- MEDIA QUERIES --*/
@media (max-width:1024px) {
	.portfolio-img {
		width: 75%;
	}

	/*.portfolio-label {
		font-size: 2vw !important;
	}*/
}
@media (max-width:640px) {
	.portfolio-img {
		margin: 1rem auto;
		width: 50%;
	}
	/*.portfolio-label {
		font-size: 4.5vw !important;
	}*/
	.blogthumb {
	line-height: 200px;
}
}
@media (min-width:1024px) {
	#second {
		height: 100vh;
		padding-top: 2rem;
		min-height: 520px;
	}
	#first {
		height: 160vh;
		padding-top: 1rem;
		min-height: 700px;

	}
	#first .row {
		margin-top: 0rem;
	}

}
@media (min-width:640px) {
	.medium-up-fixed {
		position: fixed;
	}
	.portfolio-body {
	margin: 1rem 2rem 2rem 0;
	}
}
@media (min-width: 640px) and (max-width: 990px) {
	.yt {
	height: 460px;
	}
	.yt h3{
	font-size: 20px;
	}
	.ytlink {
	height: 50px;
	}
	.blogthumb {
	line-height: 350px;
}
}
@media (max-width: 640px)  {
	.yt {
	height: 500px;
	}
}
/* ... */

